# pluto

./: .gitignore  CREDITS.md  README.md  main.py  pyproject.toml
assets/: bullet.blend  skeleton.blend
assets/animations/: animations.blend
assets/characters/: skeleton.blend
assets/levellibs/: dungeon.blend  specials.blend
assets/levels/: dungeon_quad.blend  testenv.blend
src/game/: ai.py  config.py  level.py  network_messages.py  player.py
src/game/gamestates/: __init__.py  main.py
src/lib/: gamestates.py  networking.py  networking_message.py  networking_serializers.py  networking_transport.py
tests/lib/: test_gamestate.py  test_networking.py
